# bpsr_labs

./: .env.example  .gitignore  Directory.Build.props  PORTING_INSTRUCTIONS.md  PORTING_NOTES.md  README.md  ROADMAP.md  SETUP_STATUS.md  pyproject.toml  requirements-dev.txt
client/: __init__.py  capture.py  client.spec  config.py  decode.py  extract_boss.py  frames.py  publish.py  run.py
docs/: BPTimer_Protocol_Notes.md  Design.md  Quickstart_Windows.md  client-extraction.md
offline_test/: mock_bptimer.py  replay.py
offline_test/samples/: multi_boss.jsonl  no_boss.jsonl  single_boss.jsonl
ref/: KICKOFF.md  bpsr-logs-ARCHITECTURE.md  message.txt
scripts/: dump.ps1  extract.ps1  import-dotenv.ps1  port-to-repo.ps1  setup.ps1
src/Il2CppMetadataDump/: Program.cs
src/Orchestrator.Cli/: Orchestrator.Cli.csproj  Program.cs
src/client-extraction/: CMakeLists.txt  README.md
tests/: conftest.py
tests/integration/: test_offline_replay.py  test_publish_mock.py
tests/unit/: test_boss_extractor.py  test_client_frames.py
