cmake_minimum_required(VERSION 3.15)
project(ClientExtraction)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Output directories
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

# Include directories
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)

# Source files (placeholder - to be implemented)
# file(GLOB_RECURSE SOURCES "cpp/*.cpp")
# file(GLOB_RECURSE HEADERS "include/*.h")

# Executable target (placeholder)
# add_executable(client-extraction ${SOURCES} ${HEADERS})

# Platform-specific settings
if(WIN32)
    # Windows-specific settings
    add_definitions(-D_WIN32_WINNT=0x0601)
endif()

# Note: This is a placeholder CMakeLists.txt
# Actual source files and build configuration will be added during implementation

